CHANGES:

0.7.1 -> 0.7.2
- Added Box Drawing character set mapping (Fridrich Strba)
- Handling of hard spaces and soft hyphens (Fridrich Strba)
- Change in conversion of Deletable Hard/Soft EOL/EOC/EOP
  and handling of some single byte functions that have their
  equivalent in the EOL group (Fridrich Strba)
- MSVC compiler switch (Fridrich Strba)
- Some more refactoring, sharing more code between parsers (Marc Maurer)
- Windows versioning: add a BUILDNUMBER (Fridrich Strba)

0.7.0 -> 0.7.1
- Fixes to the multinational character map (Fridrich Strba)
- Fix handling of sub documents, broken by me (William Lachance, Marc Maurer)
- Fix class structure of the WP5 function groups (Marc Maurer)
- Basic page break support for WP4.2 and WP5.x (Marc Maurer)
- README update, to avoid confusing licensing issues (Marc Maurer)

0.6.6 -> 0.7.0
- Basic WP4.2 file format support (Marc Maurer)
- Basic WP5 file format support (Marc Maurer)
- Fix errors in the international character mappings (Fridrich Strba)
- Cleanup file header handling mess (Marc Maurer)
- Removal of stale files (Marc Maurer)
- Several fixes to make libwpd compile on Win32/MSVC (Marc Maurer)
- Make the wpd2text converter use the high level parsing framework
  to support WP4 and WP5 documents as well (Marc Maurer)
- Rework the wpd2raw tool to use the high level parsing framework
  to support WP4 and WP5 documents as well (Marc Maurer)
- Restructure the class hierarchy to allow for code sharing
  between the different high level listeners (Marc Maurer)
- Close open page spans at the end of the document (Marc Maurer)
- Updated MSVC6 project files, we have a win32 lib again, yay! (Marc Maurer)
- Reduce the number of installed header files (Marc Maurer)
- Add mingw build system (Fridrich Strba)
- Fix rpm build system with respect to "make dist" (Rui Miguel Seabra)

0.6.5 -> 0.6.6
- Add an encryption exception thrown for encrypted documents to allow
  for more verbose error detection (Marc Maurer)

0.6.4 -> 0.6.5