@@ -1,6 +1,8 @@
 CHANGES:
 
 0.7.1 -> 0.7.2
+- Handle unsupported file types other than WordPerfect documents
+  (like Macintosh WP2.0 documents) more gracefull (Marc Maurer)
 - Added Box Drawing character set mapping (Fridrich Strba)
 - Handling of hard spaces and soft hyphens (Fridrich Strba)
 - Change in conversion of Deletable Hard/Soft EOL/EOC/EOP
